--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="wrapper">
-        <p id="joke" style="color: green;"></p>
+        <p id="joke" ></p>
         <div class="btns">
             <button id="btn" onclick="runon()">Get Random Joke</button>
             <select id="menu" onchange="displaySelectedValue()">
